right side no longer gets cut off in Chrome

--- a/css/style3.scss
+++ b/css/style3.scss
@@ -162,7 +162,7 @@ h2, h3, h4, h5, h6 {
   width: 442px;
   // text-align: center;
   li {
-    width: 33%;
+    width: 32%;
     // padding-top: 0.9em;
   }
 }
